# tea

./: .gitignore  AtomicQueue.h  CMakeLists.txt  Clock.h  DoubleSort.h  Feature.h  FeaturePool.h  GPUDevice.h  GPUWorker.h  GPUWorkerPool.h  Makefile  README.md  TreeBuilder.cu  bsearch.cuh  convertLabels.py  defines.h  deviceQuery.cu  dq  entropies.cu  errors.cu  errors.h  histograms.cu  kernels.h  log.h  mkdocs.yml  runtests.sh  system_utils.h  utilities.cu  utils.h
HandNet/: README.md  checkvals.m  convertLabels.py  genData.m  genDataAll.m  genDataLibSVM.m  getDepthFeatures.cpp  getDepthFeatures.mexa64
docs/: benchmarking.md  cli-and-outputs.md  dataset-format.md  docs-site.md  getting-started.md  handnet.md  index.md  references.md  testing.md  training-workflow.md
examples/: README.md
scripts/: benchmark.py  build.sh  build_docs.sh  check_env.sh  estimate_training_memory.py  expand_dataset.py  handnet_to_tea.py  run_smoke.sh  serve_docs.sh
tests/: README.md  comments.txt  expandData.m  expandDataScript.m  genTest_Accuracy.m  genTest_DataType.m  genTest_Depths.m  genTest_Distribution.m  genTest_Extreme.m  genTest_Folding.m  genTest_GPUs.m  genTest_NumClasses.m  genTest_Preloaded.m  genTest_Threshold.m  gen_smoke_dataset.py  gtx1080-T10.test  gtx1080-T11.test  gtx1080-T12-0.test  gtx1080-T12-2.test  gtx1080-T3.test  gtx1080-T4.test  gtx1080-T5.test  gtx1080-T6.test  gtx1080-T7.test  gtx1080-T8.test  gtx580-T10.test  gtx580-T11.test  gtx580-T12-1.test  gtx580-T3.test  gtx580-T4.test  gtx580-T5.test  gtx580-T6.test  gtx580-T7.test  gtx580-T8.test  k5000m-T10.test  (+26 more)
(+2 files in other folders)
